[package]
name = "report-generator-example"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
insta = { version = "1.34", features = ["json"] }
tempfile = "3.8"

[[bin]]
name = "report-generator"
path = "src/main.rs"
