[package]
name = "api-client-example"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"

[[bin]]
name = "api-client"
path = "src/main.rs"
