[package]
name = "my-cli"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"
insta = "1.34"

[[bin]]
name = "my-cli"
path = "src/main.rs"
